apps/blue-vision/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-vision-api
  namespace: blue-vision
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-vision-api
  template:
    metadata:
      labels:
        app: blue-vision-api
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: blue-vision-api

      containers:
        - name: blue-vision-api
          image: ghcr.io/harris-consult/blue-vision-api:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
